# packages/trueforge-sdk/src/serialization/types/index.ts
@@ -235,8 +235,8 @@ export * from "./TurnUpdateStateRunning.js";
 export * from "./UserMessage.js";
 export * from "./UserMessageContent.js";
 export * from "./UserMessageContentItem.js";
-export * from "./UserToolApprovalEvent.js";
-export * from "./UserToolResponseEvent.js";
+export * from "./UserToolApprovalMessage.js";
+export * from "./UserToolResponseMessage.js";
 export * from "./WebSearchCapability.js";
 export * from "./WebSearchConfig.js";
 export * from "./WebSearchProviderManifest.js";
